# statick-and-stannel

./: .gitignore  README.md
programs/: .gitignore  Makefile  README.md  add.txt  alt_one_chan.txt  alt_two_chan.txt  alt_two_chan_2.txt  alt_two_chan_subsequent.txt  basic_proc.txt  call_double.txt  call_jumps.txt  call_returns.txt  call_twice.txt  cjump.txt  cmp.txt  create_chan.txt  create_del_chan.txt  create_proc.txt  drop.txt  drop2.txt  dup.txt  dup2.txt  halt.txt  jump.txt  jump_next.txt  nop.txt  push_even_more.txt  push_large_1.txt  push_large_2.txt  push_medium.txt  push_one.txt  push_several.txt  push_two.txt  read_local_0.txt  read_local_1.txt  (+18 more)
statick-tools/: Cargo.toml
statick-tools/src/lib/: core.rs  isa.rs  lib.rs  memory.rs  process.rs  statick.rs
statick-tools/src/lib/assembler/: mod.rs
statick-tools/src/lib/core/: condition.rs  core_impl.rs  execution_unit.rs  flags.rs  messages.rs
statick-tools/src/lib/isa/: instruction.rs  test_utils.rs
statick-tools/src/lib/memory/: heap.rs  memory_cell.rs  word_io.rs
statick-tools/src/lib/process/: call_stack.rs  channel.rs  state.rs  value_stack.rs
statick-tools/src/lib/processor/: mod.rs
statick-tools/src/lib/statick/: ast.rs  codegen.rs  compiler.rs  lexer.rs  parser.rs  types.rs
statick-tools/src/lib/statick/codegen/: optimizer.rs  test.rs
statick-tools/src/lib/statick/compiler/: test.rs
statick-tools/src/lib/statick/types/: constraint.rs  constraint_set.rs  mgu.rs  stack.rs  stack_constraint.rs  subscript.rs  test.rs  type_alloc.rs  type_error.rs  type_fmt.rs  type_impl.rs  unifier.rs
(+107 files in other folders)
